--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="mainApp">
     <head>
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -8,6 +8,12 @@
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+        
+        <!-- Medicos -->
+        <script src="src/modules/medicos/medicos.mod.js" type="text/javascript"></script>
+        <script src="src/modules/medicos/medicos.ctrl.js" type="text/javascript"></script>
+        
+        <script src="src/app.js" type="text/javascript"></script> 
 
     </head>
     <body>
@@ -24,7 +30,7 @@
                     <li><a href="#">Hospitales</a></li>
                     <li><a href="#">Usuarios</a></li>
                     <li><a href="#">Farmacias</a></li>
-                    <li><a href="#">Médicos</a></li>
+                    <li><a ui-sref="medicosList">Médicos</a></li>
                 </ul>
             </div>
 
