--- a/especialistas-web/src/main/webapp/src/modules/medicos/medicos.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/medicos.list.html
@@ -10,8 +10,8 @@
             </thead>
             <tbody>
                 <tr ng-repeat="medico in medicosRecords">
-                    <td id="{{$index}}-nombre">{{author.nombre}}</td>
-                    <td id="{{$index}}-especializacion">{{author.especializacion}}</td>                   
+                    <td id="{{$index}}-nombre">{{medico.nombre}}</td>
+                    <td id="{{$index}}-especializacion">{{medico.especializacion}}</td>
                 </tr>
             </tbody>
         </table>
