--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -23,7 +23,7 @@
                     <li class="active"><a href="#">Página Principal <span class="sr-only">(current)</span></a></li>
                     <li><a href="#">Hospitales</a></li>
                     <li><a href="#">Usuarios</a></li>
-                    <li><a href="#">Farmacias</a></li>
+                    <li><a ui-sref="farmaciaList">Farmacias</a></li>
                     <li><a href="#">Médicos</a></li>
                 </ul>
             </div>
