--- a/especialistas-web/src/main/webapp/src/modules/farmacias/farmacias.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/farmacias/farmacias.list.html
@@ -1,16 +1,17 @@
-<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
-<div id="alertPanel" style="text-align: center"></div>
 <div class="container-fluid">
     <div class="col-md-4">
         <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Nombre</th>    
+                    <th>Ubicación</th>    
                 </tr>
             </thead>
+            <input class="text">
             <tbody>
                 <tr ng-repeat="farmacia in farmacias">
                     <td id="{{$index}}-nombre">{{farmacia.nombre}}</td>
+                    <td id="{{$index}}-nombre">{{farmacia.ubicacion}}</td>
                 </tr>
             </tbody>
         </table>
