--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -25,6 +25,10 @@
         <script src="src/modules/farmacias/farmacias.mod.js" type="text/javascript"></script>
         <script src="src/modules/farmacias/farmacias.ctrl.js" type="text/javascript"></script>
         
+        <!-- Cita-->
+        <script src="src/modules/citas/citas.mod.js" type="text/javascript"></script>
+        <script src="src/modules/citas/citas.ctrl.js" type="text/javascript"></script>
+        
         <script src="src/app.js" type="text/javascript"></script> 
         <script src="src/http-interceptor.factory.js" type="text/javascript"></script> 
 
@@ -45,6 +49,7 @@
                     <li><a ui-sref="farmaciasList">Farmacias</a></li>
                     <li><a ui-sref="medicosList">Médicos</a></li>
                     <li><a ui-sref="laboratoriosList">Laboratorios</a></li>
+                    <li><a ui-sref="citasList">Citas</a></li>
                 </ul>
             </div>
             <div ui-view="mainView">
