--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -29,6 +29,11 @@
         <script src="src/modules/citas/citas.mod.js" type="text/javascript"></script>
         <script src="src/modules/citas/citas.ctrl.js" type="text/javascript"></script>
         
+        <!--Consultorios-->
+        <script src="src/modules/consultorios/consultorios.mod.js" type="text/javascript"></script>
+        <script src="src/modules/consultorios/consultorios.ctrl.js" type="text/javascript"></script>
+
+        
         <script src="src/app.js" type="text/javascript"></script> 
         <script src="src/http-interceptor.factory.js" type="text/javascript"></script> 
 
@@ -50,6 +55,7 @@
                     <li><a ui-sref="medicosList">Médicos</a></li>
                     <li><a ui-sref="laboratoriosList">Laboratorios</a></li>
                     <li><a ui-sref="citasList">Citas</a></li>
+                    <li><a ui-sref="consultoriosList">Consultorios</a></li>
                 </ul>
             </div>
             <div ui-view="mainView">
