--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -32,6 +32,10 @@
         <!--Consultorios-->
         <script src="src/modules/consultorios/consultorios.mod.js" type="text/javascript"></script>
         <script src="src/modules/consultorios/consultorios.ctrl.js" type="text/javascript"></script>
+        
+        <!--Hospitales-->
+        <script src="src/modules/hospitales/hospitales.mod.js" type="text/javascript"></script>
+        <script src="src/modules/hospitales/hospitales.ctrl.js" type="text/javascript"></script>
 
         
         <script src="src/app.js" type="text/javascript"></script> 
@@ -49,7 +53,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Página Principal <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Hospitales</a></li>
+                    <li><a ui-sref="hospitalesList">Hospitales</a></li>
                     <li><a href="#">Usuarios</a></li>
                     <li><a ui-sref="farmaciasList">Farmacias</a></li>
                     <li><a ui-sref="medicosList">Médicos</a></li>
