--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
@@ -10,7 +10,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="hospital in hospitalesRecords">
-                    <td id="{{$index}}-nombre">{{hospital.nombre}}
+                    <td id="{{$index}}-nombre"><a ui-sref="hospitalDetail({hospitalId: hospital.id})">{{hospital.nombre}}</a>
                     </td>
                     <td>
                         <button type="button" class="btn btn-default">
