--- a/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.list.html
@@ -7,7 +7,7 @@
                     {{usuario.nombre}} <br>
                     {{usuario.cedula}} 
 
-                    <a href="#" style="color: #f44">Eliminar</a>
+                    <a href="#" style="color: #f44" ui-sref="usuariosDelete({usuarioId: usuario.id})">Eliminar</a>
                     <a href="#">Editar</a>
                 </div>
             </div>
