--- a/especialistas-web/src/main/webapp/index2.html
+++ b/especialistas-web/src/main/webapp/index2.html
@@ -49,6 +49,7 @@
         <!--Usuarios new-->
         
         <script src="src/modules/usuarios/new/usuarios.new.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/usuarios/delete/usuarios.delete.ctrl.js" type="text/javascript"></script>
 
         
         <script src="src/app.js" type="text/javascript"></script> 
