--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -19,8 +19,7 @@
         <!-- Laboratorios -->
         <script src="src/modules/laboratorios/laboratorios.mod.js" type="text/javascript"></script>
         <script src="src/modules/laboratorios/laboratorios.ctrl.js" type="text/javascript"></script>
-        <script src="src/modules/laboratorios/post/lab.post.ctrl.js" type="text/javascript"></script>
-         <script src="src/modules/laboratorios/delete/lab.ctrl.delete.js" type="text/javascript"></script>
+        <script src="src/modules/laboratorios/detail.ctrl.js" type="text/javascript"></script>
         
         <!-- Farmacia-->
         <script src="src/modules/farmacias/farmacias.mod.js" type="text/javascript"></script>
