--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -15,6 +15,11 @@
         <!-- Medicos -->
         <script src="src/modules/medicos/medicos.mod.js" type="text/javascript"></script>
         <script src="src/modules/medicos/medicos.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/medicos/create/medicos.create.ctrl.js" type="text/javascript"></script>
+        
+        <!-- Horas -->
+        <script src="src/modules/horas/horas.mod.js" type="text/javascript"></script>
+        <script src="src/modules/horas/horas.ctrl.js" type="text/javascript"></script>
 
         <!-- Laboratorios -->
         <script src="src/modules/laboratorios/laboratorios.mod.js" type="text/javascript"></script>
