--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
@@ -1,9 +1,12 @@
 <div class="container-fluid">
     <div class="col-md-4">
-        <h2>Nombre:</h2>
+        <h2>Nombre</h2>
         {{laboratorioActual.nombre}}
-        <h2>Ubicacion:</h2>
+        <h2>Ubicacion</h2>
         {{laboratorioActual.ubicacion.nombre}}
     </div>
-        
+    <div class="col-md-12"> <br>
+        <button id="eliminar-lab" ui-sref="labDelete">Eliminar</button>
+        <button id="crear-lab">Crear</button>
+    </div>       
 </div>
