--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.list.html
@@ -4,7 +4,7 @@
             <thead>
                 <tr>
                     <th>Nombre</th>     
-                    <th>Ubicacion</th>
+                    <th>Ubicación</th>
 
                 </tr>
             </thead>
@@ -14,7 +14,7 @@
                         <a ui-sref='labDetail({laboratorioId: laboratorio.id})'> {{laboratorio.nombre}}</a>
                        
                     </td>
-                    <td id ="{{$index}}-ubicacion}">{{laboratorio.ubicacion.nombre}}</td>
+                    <td id ="{{$index}}-ubicación}">{{laboratorio.ubicacion.nombre}}</td>
                 </tr>
 
             </tbody>
