--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -26,6 +26,7 @@
         <script src="src/modules/laboratorios/laboratorios.mod.js" type="text/javascript"></script>
         <script src="src/modules/laboratorios/laboratorios.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/laboratorios/detail.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/laboratorios/delete/labDelete.ctrl.js" type="text/javascript"></script>
 
         <!-- Farmacia-->
         <script src="src/modules/farmacias/farmacias.mod.js" type="text/javascript"></script>
