--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
-    <div class="col-md-4">
+    <div class="col-md-4">m
         <h2>Nombre</h2>
         {{laboratorioActual.nombre}}
-        <h2>Ubicación</h2>
+        <h2>Ubicaciózn</h2>
         {{laboratorioActual.ubicacion.nombre}}
     </div>
     <div class="col-md-12"> <br>
