--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="col-md-4">m
+    <div class="col-md-4">
         <h2>Nombre</h2>
         {{laboratorioActual.nombre}}
         <h2>Ubicaciózn</h2>
