--- a/especialistas-web/src/main/webapp/src/modules/medicos/medicos.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/medicos.list.html
@@ -1,24 +1,32 @@
 <div class="container-fluid">
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-        <div class="btn-group mr-2" role="group" aria-label="First group">
-            <a class="btn btn-info" ui-sref="medicosCreate"><span class="glyphicon glyphicon-plus-sign"></span> Nuevo médico</a>
+    <div class="panel-group">
+        <div class="panel panel-primary">
+            <div class="panel-heading"><label>Médicos</label></div>
+            <div class="panel-body">
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group mr-2" role="group" aria-label="First group">
+                        <a class="btn btn-info" ui-sref="medicosCreate"><span class="glyphicon glyphicon-plus-sign"></span> Nuevo médico</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Nombre</th>    
+                                <th>Especialización</th>  
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="medico in medicosRecords">
+                                <td id="{{$index}}-nombre"><a ui-sref="medicoDetail({medicoId: medico.id})">{{medico.nombre}}</a></td>
+                                <td id="{{$index}}-especializacion">{{medico.especializacion}}</td> 
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="col-md-4">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Nombre</th>    
-                    <th>Especializacion</th>  
 
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="medico in medicosRecords">
-                    <td id="{{$index}}-nombre"><a ui-sref="medicoDetail({medicoId: medico.id})">{{medico.nombre}}</a></td>
-                    <td id="{{$index}}-especializacion">{{medico.especializacion}}</td> 
-                </tr>
-            </tbody>
-        </table>
-    </div>
 </div>
