--- a/especialistas-web/src/main/webapp/index2.html
+++ b/especialistas-web/src/main/webapp/index2.html
@@ -25,6 +25,8 @@
         <!-- Farmacia-->
         <script src="src/modules/farmacias/farmacias.mod.js" type="text/javascript"></script>
         <script src="src/modules/farmacias/farmacias.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/farmacias/create/farmacias.create.ctrl.js" type="text/javascript"></script>
+
         
         <!-- Cita-->
         <script src="src/modules/citas/citas.mod.js" type="text/javascript"></script>
