primeras cosas de hora

--- a/especialistas-web/src/main/webapp/src/modules/medicos/medicos.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/medicos.list.html
@@ -3,13 +3,8 @@
         <div class="panel panel-primary">
             <div class="panel-heading"><label>Médicos</label></div>
             <div class="panel-body">
-                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                    <div class="btn-group mr-2" role="group" aria-label="First group">
-                        <a class="btn btn-info" ui-sref="medicosCreate"><span class="glyphicon glyphicon-plus-sign"></span> Nuevo médico</a>
-                    </div>
-                </div>
                 <div class="col-md-6">
-                    <table class="table table-striped">
+                    <table class="table table-hover">
                         <thead>
                             <tr>
                                 <th>Nombre</th>    
@@ -18,10 +13,11 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="medico in medicosRecords">
-                                <td id="{{$index}}-nombre"><a ui-sref="medicoDetail({medicoId: medico.id})">{{medico.nombre}}</a></td>
+                            <tr ng-repeat="medico in medicosRecords" ui-sref="medicoDetail({medicoId: medico.id})">
+                                <td id="{{$index}}-nombre">{{medico.nombre}}</td>
                                 <td id="{{$index}}-especializacion">{{medico.especializacion}}</td> 
                             </tr>
+                            <tr class="info" ui-sref="medicosCreate()"><td>Añadir nuevo</td><td></td></tr>
                         </tbody>
                     </table>
                 </div>
