--- a/especialistas-web/src/main/webapp/src/modules/medicos/medicos.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/medicos.detail.html
@@ -1,13 +1,15 @@
-<div class="container-fluid">
-    <div class="col-md-4">
-        <table class="table table-striped">
-            <tbody>
-                <tr><td>Nombre:</td><td id="{{$index}}-nombre">{{medico.nombre}}</td></tr>
-                <tr><td>Especialización:</td><td id="{{$index}}-especializacion">{{medico.especializacion}}</td></tr>
-            </tbody>
-        </table>
+<div class="col-md-3">
+    <dl>     
+        <dt>Nombre</dt>
+        <dd>{{medico.nombre}}</dd>
+
+        <hr>
+        <dt>Especialización</dt>
+        <dd>{{medico.especializacion}}</dd>
+
+        <hr>
         <a class="btn btn-default btn-sm" ui-sref="medicoUpdate({medicoId: medico.id})">Actualizar datos <span class="glyphicon glyphicon-edit"></span></a>
         <a class="btn btn-danger btn-sm" ui-sref="medicoDelete({medicoId: medico.id})">Borrar Médico <span class="glyphicon glyphicon-trash"></span></a>
-        <div ui-view="extraView"></div> 
-    </div>
+
+    </dl>
 </div>
