--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -35,7 +35,9 @@
         <script src="src/modules/farmacias/farmacias.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/farmacias/create/farmacias.create.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/farmacias/detail/farmacias.detail.ctrl.js" type="text/javascript"></script>
-        
+        <script src="src/modules/farmacias/create/farmacias.addMedicamento.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/farmacias/delete/farmacias.deleteMedicamento.ctrl.js" type="text/javascript"></script>
+
         <!-- Medicamento-->
         <script src="src/modules/medicamentos/medicamentos.mod.js" type="text/javascript"></script>
         <script src="src/modules/medicamentos/medicamentos.ctrl.js" type="text/javascript"></script>
