--- a/especialistas-web/src/main/webapp/index2.html
+++ b/especialistas-web/src/main/webapp/index2.html
@@ -21,11 +21,15 @@
         <script src="src/modules/laboratorios/laboratorios.mod.js" type="text/javascript"></script>
         <script src="src/modules/laboratorios/laboratorios.ctrl.js" type="text/javascript"></script>
 
-
+        <!-- Horas -->
+        <script src="src/modules/horas/horas.mod.js" type="text/javascript"></script>
+        <script src="src/modules/horas/horas.ctrl.js" type="text/javascript"></script>
+        
         <!-- Farmacia-->
         <script src="src/modules/farmacias/farmacias.mod.js" type="text/javascript"></script>
         <script src="src/modules/farmacias/farmacias.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/farmacias/create/farmacias.create.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/farmacias/detail/farmacias.detail.ctrl.js" type="text/javascript"></script>
 
         
         <!-- Cita-->
