--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -33,6 +33,8 @@
         <!-- Farmacia-->
         <script src="src/modules/farmacias/farmacias.mod.js" type="text/javascript"></script>
         <script src="src/modules/farmacias/farmacias.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/farmacias/create/farmacias.create.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/farmacias/detail/farmacias.detail.ctrl.js" type="text/javascript"></script>
         
         <!-- Cita-->
         <script src="src/modules/citas/citas.mod.js" type="text/javascript"></script>
