Corrección mínima detail hospital

--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.detail.html
@@ -3,6 +3,6 @@
     {{currentHospital.nombre}}
     <br>
     <h3>ID</h3><br>
-    {{currentHospital.nombre}}
+    {{currentHospital.id}}
     
 </div>
