--- a/especialistas-web/src/main/webapp/src/modules/consultorios/consultorios.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/consultorios/consultorios.list.html
@@ -3,13 +3,32 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Nombre</th>     
-
+                    <th>Número</th>
+                    <th>Eliminar</th>
+                    <th>Editar</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="consultorio in consultoriosRecords">
-                    <td id="{{$index}}-nombre">{{consultorio.nombre}}</td>
+                    <td id="{{$index}}-nombre"><a ui-sref="consultorioDetail({consultorioId: consultorio.id})">{{consultorio.nombre}}</a>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-default">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        </button>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-default">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button type="button" class="btn btn-default">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </button>
+                    </td>
                 </tr>
             </tbody>
         </table>
