--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
@@ -25,8 +25,8 @@
                 </tr>
                 <tr>
                     <td>
-                        <button type="button" class="btn btn-default">
-                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        <button type="button" class="btn btn-default" ui-sref="hospitalesCreate">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true" ></span>
                         </button>
                     </td>
                 </tr>
