--- a/especialistas-web/src/main/webapp/src/modules/medicos/delete/medicos.delete.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/delete/medicos.delete.html
@@ -1,3 +1,4 @@
+<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
 <div class="center-block well text-center">
     <h1>¿Está seguro que quiere eliminar este médico?</h1>
     <button id="confirm-delete" ng-click="deleteMedico()" class="btn btn-danger">Borrar</button>
