--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -23,6 +23,9 @@
         <!-- Horas -->
         <script src="src/modules/horas/horas.mod.js" type="text/javascript"></script>
         <script src="src/modules/horas/horas.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/horas/horas.detail.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/horas/create/horas.create.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/horas/delete/horas.delete.ctrl.js" type="text/javascript"></script>
 
         <!-- Laboratorios -->
         <script src="src/modules/laboratorios/laboratorios.mod.js" type="text/javascript"></script>
