--- a/especialistas-web/src/main/webapp/src/modules/medicos/create/medicos.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/create/medicos.create.html
@@ -1,8 +1,9 @@
+<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
 <div class="container-fluid">
     <div class="panel-group">
         <div class="panel panel-primary">
-            <div class="panel-heading"><label ng-if="!edit" id="createAuthor">Agregar médico</label>
-                <label ng-if="edit" id="editAuthor">Editar Información</label></div>
+            <div class="panel-heading"><label ng-if="!edit" id="createMedico">Agregar médico</label>
+                <label ng-if="edit" id="editMedico">Editar Información</label></div>
             <div class="panel-body">
                 <form ng-submit="createMedico()" name="medico">
                     <div class="form-group">
