--- a/especialistas-web/src/main/webapp/src/modules/medicos/medicos.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/medicos.detail.html
@@ -1,15 +1,23 @@
-<div class="col-md-3">
-    <dl>     
-        <dt>Nombre</dt>
-        <dd>{{medico.nombre}}</dd>
+<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
+<div class="panel panel-default"> 
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-md-3">
+                <dl>     
+                    <dt>Nombre</dt>
+                    <dd>{{medico.nombre}}</dd>
 
-        <hr>
-        <dt>Especialización</dt>
-        <dd>{{medico.especializacion}}</dd>
+                    <hr>
+                    <dt>Especialización</dt>
+                    <dd>{{medico.especializacion}}</dd>
 
-        <hr>
-        <a class="btn btn-default btn-sm" ui-sref="medicoUpdate({medicoId: medico.id})">Actualizar datos <span class="glyphicon glyphicon-edit"></span></a>
-        <a class="btn btn-danger btn-sm" ui-sref="medicoDelete({medicoId: medico.id})">Borrar Médico <span class="glyphicon glyphicon-trash"></span></a>
+                    <hr>
+                    <a class="btn btn-default btn-sm" ui-sref="medicoUpdate({medicoId: medico.id})">Actualizar datos <span class="glyphicon glyphicon-edit"></span></a>
+                    <a class="btn btn-danger btn-sm" ui-sref="medicoDelete({medicoId: medico.id})">Borrar Médico <span class="glyphicon glyphicon-trash"></span></a>
 
-    </dl>
+                </dl>
+            </div>
+            <div class="col-md-9" ui-view="childrenView"></div>
+        </div>
+    </div>
 </div>
