--- a/especialistas-web/src/main/webapp/src/modules/medicos/create/medicos.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicos/create/medicos.create.html
@@ -25,7 +25,7 @@
                         <div class="form-group col-sm-12">
                             <input ng-show="medico.$valid" type="submit" value="Guardar" class="btn btn-success"/>
                             <a ng-if="!edit" class="btn btn-info" ui-sref="medicosList">Cancelar</a>
-                            <a ng-if="edit" class="btn btn-info" ui-sref="medicoDetail({medicoId})">Cancelar</a>
+                            <a ng-if="edit" class="btn btn-info" ui-sref="horasList({medicoId})">Cancelar</a>
                         </div>
                     </div>
                 </form>
