--- a/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
@@ -18,7 +18,7 @@
                 <hr>
                 <dt>nombre</dt>
                 <dd>{{currentUsuario.nombre}}</dd>
-                <a href="#" style="color: #f44" ui-sref="usuariosDelete({usuarioId: usuario.id})">Eliminar</a>
+                <a href="#" style="color: #f44" ui-sref="usuariosDelete({usuarioId: currentUsuario.id})">Eliminar</a>
                 <a href="#">Editar</a>
 
             </dl>
