--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -188,6 +188,10 @@
             .add:link{
                 text-decoration: none;
             }
+            
+            .img-responsive{
+                
+            }
         </style>
     </head>
     <body>
