--- a/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.list.html
@@ -3,7 +3,7 @@
         <div class="col-sm-4 col-lg-3 pacman">
             <div class="usuario-padre">
                 <a ui-sref="usuarioDetail({usuarioId: usuario.id})">
-                    <img src="https://ep01.epimg.net/verne/imagenes/2017/02/07/articulo/1486460356_768109_1486460432_noticia_normal.jpg" alt="">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5PiRLyIsW9zpkhazNEVeuuFcPvyjWLlfnSBkQOL2ZS_p8DTgP" alt="">
                 </a>
                 <div class="usuario-data">
                     {{usuario.nombre}} <br>
