--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -73,6 +73,7 @@
         
         <script src="src/modules/usuarios/new/usuarios.new.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/usuarios/delete/usuarios.delete.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/usuarios/update/usuarios.update.ctrl.js" type="text/javascript"></script>
 
         
         <script src="src/app.js" type="text/javascript"></script> 
