--- a/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
@@ -46,6 +46,9 @@
                 </tr>
             </tbody>
     </table>
+    <div class="usuario-data">
+        <a href="#" ui-sref="usuariosDelete({usuarioId: currentUsuario.id})">Agregar</a>
+    </div>
 </div>
 
 <div class="panel panel-default col-sm-6">
@@ -66,4 +69,7 @@
                 </tr>
             </tbody>
     </table>
+    <div class="usuario-data">
+        <a href="#" ui-sref="usuariosDelete({usuarioId: currentUsuario.id})">Agregar</a>
+    </div>
 </div>
