cambios de estilos

--- a/especialistas-web/src/main/webapp/src/modules/farmacias/create/farmacia.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/farmacias/create/farmacia.create.html
@@ -7,31 +7,31 @@
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="farmaciaName" class="col-sm-2">Name:</label>
-                            <input id="farmaciaName" required ng-model="farmaciaName" class="col-sm-6"/>
+                            <input style="color:black;"  id="farmaciaName" required ng-model="farmaciaName" class="col-sm-6"/>
                         </div>
                     </div>
-                                        <div class="form-group row">
+                    <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="farmaciaRadio" class="col-sm-2">radio:</label>
-                            <input id="farmaciaRadio" required ng-model="farmaciaRadio" class="col-sm-6"/>
+                            <input  style="color:black;" id="farmaciaRadio" required ng-model="farmaciaRadio" class="col-sm-6"/>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="ubicacionName" class="col-sm-2">Name Ubicación:</label>
-                            <input id="ubicacionName" required ng-model="ubicacionName" class="col-sm-6"/>
+                            <input style="color:black;" id="ubicacionName" required ng-model="ubicacionName" class="col-sm-6"/>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="latitudUbicacion" class="col-sm-2">latitud:</label>
-                            <input id="latitudUbicacion" required ng-model="latitudUbicacion" class="col-sm-6"/>
+                            <input style="color:black;" id="latitudUbicacion" required ng-model="latitudUbicacion" class="col-sm-6"/>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="longitudUbicacion" class="col-sm-2">longitud:</label>
-                            <input id="longitudUbicacion" required ng-model="longitudUbicacion" class="col-sm-6"/>
+                            <input style="color:black;" id="longitudUbicacion" required ng-model="longitudUbicacion" class="col-sm-6"/>
                         </div>
                     </div>
                     <div class="form-group row">
