--- a/especialistas-web/src/main/webapp/src/modules/medicamentos/create/medicamentos.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/medicamentos/create/medicamentos.create.html
@@ -7,13 +7,13 @@
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="medicamentoName" class="col-sm-2">Name:</label>
-                            <input id="medicamentoName" required ng-model="medicamentoName" class="col-sm-6"/>
+                            <input style="color:black;" id="medicamentoName" required ng-model="medicamentoName" class="col-sm-6"/>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="medicamentoPrecio" class="col-sm-2">Precio:</label>
-                            <input id="medicamentoPrecio" required ng-model="medicamentoPrecio" class="col-sm-6"/>
+                            <input style="color:black;" id="medicamentoPrecio" required ng-model="medicamentoPrecio" class="col-sm-6"/>
                         </div>
                     </div>
   <!--                  <div ng-if="edit" class="panel-group" id="theBooks">
