--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.detail.html
@@ -1,8 +1,16 @@
 <div class="panel panel-default"> 
-    <h3>Nombre:</h3><br>
-    {{currentHospital.nombre}}
-    <br>
-    <h3>ID</h3><br>
-    {{currentHospital.id}}
-    
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">NOMBRE</th>
+                <th scope="col">UBICACION</th>
+            </tr>
+        </thead>
+        <tr>
+            <td id="{{$index}}-hospitalId">{{currentHospital.id}}</td>
+            <td id="{{$index}}-hospitalName">{{currentHospital.nombre}}</td>
+            <td id="{{$index}}-hospitalUbicacion">{{currentHospital.ubicacion.nombre}}</td>
+        </tr>
+    </table>
 </div>
