cita y orden modulos

--- a/especialistas-web/src/main/webapp/src/modules/citas/citas.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/citas/citas.list.html
@@ -1,15 +1,16 @@
 <div class="container-fluid">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Comentarios</th>                          
+                    <th>Citas</th>        
+                    <th></th>  
+                    <th></th>  
                 </tr>
-            </thead>
-       
+            </thead>       
             <tbody>
                 <tr ng-repeat="cita in citas">
-                    <td id="{{$index}}-comentarios">{{cita.comentarios}}</td>
+                    <td id="{{$index}}-comentarios"><a ui-sref="citasDetail({citasId: cita.id})">{{cita.comentarios}}</td>
                     <td> <button id="{{$index}}-reagendar-btn" class="btn btn-default btn-sm" href="#">Reagendar</button></td>
                     <td> <button id="{{$index}}-cancelar-btn" class="btn btn-default btn-sm" href="#">Cancelar</button></td>
                 </tr>
