--- a/especialistas-web/src/main/webapp/index2.html
+++ b/especialistas-web/src/main/webapp/index2.html
@@ -36,6 +36,10 @@
         <script src="src/modules/citas/citas.mod.js" type="text/javascript"></script>
         <script src="src/modules/citas/citas.ctrl.js" type="text/javascript"></script>
         
+        <!-- Orden-->
+        <script src="src/modules/ordenesMedicas/ordenesMedicas.mod.js" type="text/javascript"></script>
+        <script src="src/modules/ordenesMedicas/ordenesMedicas.ctrl.js" type="text/javascript"></script>
+        
         <!--Consultorios-->
         <script src="src/modules/consultorios/consultorios.mod.js" type="text/javascript"></script>
         <script src="src/modules/consultorios/consultorios.ctrl.js" type="text/javascript"></script>
