--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -56,6 +56,8 @@
         <script src="src/modules/hospitales/hospitales.mod.js" type="text/javascript"></script>
         <script src="src/modules/hospitales/hospitales.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/hospitales/create/hospitales.create.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/hospitales/delete/hospitales.delete.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/hospitales/update/hospitales.update.ctrl.js" type="text/javascript"></script>
         
         <!--Usuarios-->
         <script src="src/modules/usuarios/usuarios.mod.js" type="text/javascript"></script>
