--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.detail.html
@@ -5,12 +5,18 @@
                 <th scope="col">ID</th>
                 <th scope="col">NOMBRE</th>
                 <th scope="col">UBICACION</th>
+                <th scope="col">ELIMINAR</th>
             </tr>
         </thead>
         <tr>
             <td id="{{$index}}-hospitalId">{{currentHospital.id}}</td>
             <td id="{{$index}}-hospitalName">{{currentHospital.nombre}}</td>
             <td id="{{$index}}-hospitalUbicacion">{{currentHospital.ubicacion.nombre}}</td>
+            <td id="eliminarHospital">
+                <button type="button" class="btn btn-danger" ui-sref="hospitalDelete({idHospital: currentHospital.id})">
+                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </button>
+            </td>
         </tr>
     </table>
 </div>
