--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.list.html
@@ -13,12 +13,12 @@
                     <td id="{{$index}}-nombre"><a ui-sref="hospitalDetail({hospitalId: hospital.id})">{{hospital.nombre}}</a>
                     </td>
                     <td>
-                        <button type="button" class="btn btn-default">
+                        <button type="button" class="btn btn-default" ui-sref="hospitalDelete({hospitalId: hospital.id})">
                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                         </button>
                     </td>
                     <td>
-                        <button type="button" class="btn btn-default">
+                        <button type="button" class="btn btn-default" ui-sref="hospitalUpdate({hospitalId: hospital.id})">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         </button>
                     </td>
