--- a/especialistas-web/src/main/webapp/src/modules/hospitales/create/hospitales.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/create/hospitales.create.html
@@ -10,11 +10,11 @@
     </div>
     <div class="form-group">
         <label for="hospitalUbicacionLatitud">Latitud</label>
-        <input type="number" class="form-control" id="hospitalUbicacionLatitud" required ng-model="hospitalUbicacionLatitud" placeholder="e.g. 1.100">
+        <input class="form-control" id="hospitalUbicacionLatitud" required ng-model="hospitalUbicacionLatitud" placeholder="e.g. 1.100">
     </div>
     <div class="form-group">
         <label for="hospitalUbicacionLongitud">Longitud</label>
-        <input  type="number" class="form-control" id="hospitalUbicacionLongitud" required ng-model="hospitalUbicacionLongitud" placeholder="e.g. 1.100">
+        <input class="form-control" id="hospitalUbicacionLongitud" required ng-model="hospitalUbicacionLongitud" placeholder="e.g. 1.100">
     </div>
     <input ng-show="hospital.$valid" type="submit" value="Save" class="btn btn-success"/>
     <button type="reset" class="btn btn-info">Reiniciar</button>
